# katsu

./: .coveragerc  .env-sample  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  Dockerfile  MANIFEST.in  README.md  bento.Dockerfile  bento.dev.Dockerfile  chord_metadata_service%2Fmohpackets%2Fdocs%2Fschema.yml  docker-compose.dev.yaml  docker-compose.yaml  entrypoint.bash  entrypoint.dev.bash  entrypoint.dev.sh  entrypoint.sh  extra-properties-schemas.json.sample  katsu_wsgi.ini  locustfile.py  manage.py  mergify-test  phenov2_test.py  pyproject.toml  requirements-base.txt  requirements-candig-base.txt  requirements-candig-dev.txt  requirements-dev.txt  requirements-doc.txt  requirements.txt  run.bash  run.dev.bash  setup.py  swagger_schema.json  tox-candig.ini  tox.ini  wait_for_db.bash
.github/: commitFile.js
.github/workflows/: build.yml  dispatch-actions.yml  docker-publish.yml  lint.yml  python-app.yml  test.yml  update-schema.yaml
PULL_REQUEST_TEMPLATE/: stable_pr_template.md
chord_metadata_service/: __init__.py  cleanup.py  config.new.json  example.config.json  logger.py  manage.py  package.cfg  utils.py
chord_metadata_service/authz/: constants.py  counts.py  discovery.py  middleware.py  permissions.py  queries.py  utils.py
chord_metadata_service/chord/: admin.py  api_views.py  apps.py  data_types.py  export.py  export_cbio.py  export_utils.py  filters.py  ingest.py  models.py  permissions.py  schemas.py  serializers.py  urls.py  views_data_types.py  views_export.py  views_ingest.py  (+3 more)
config/: hooks.py  settings.py  urls.py
docs/: conf.py  index.rst  requirements.txt
examples/: 1000g_phenopackets_1_of_3.json  conditions.json  experiments.json  fhir-mapping.json  mcode_example.json  patients.json  single.json  single_req.json
metadata/: service_info.py  settings.py  urls.py  wsgi.py
patients/: allele.py  api_views.py  models.py  serializers.py
requirements/: base.txt  dev.txt  local.txt  prod.txt
scripts/: ingest.conf.json  ingest.py  remove_from_db.py
(+824 files in other folders)
